--- a/src/scss/components/CardItem.scss
+++ b/src/scss/components/CardItem.scss
@@ -1,16 +1,25 @@
 .cardItem{
+  color: var(--xpress-text-1);
+
   h4{
     font-size: 1rem;
     margin: 1rem 0 0 .3rem;
   }
   h5{
     font-size: 1rem;
-
     margin: .2rem 0 0 .3rem;
+    color: var(--xpress-text-2);
   }
   h6{
     margin: .2rem 0 0 .3rem;
     font-size: 1rem;
-
+    font-family: Xpress-bold;
   }
+  img{
+    width: 288px;
+    height: 288px;
+  }
+}
+.cardItem_link{
+  text-decoration: none;
 }
