--- a/src/index.scss
+++ b/src/index.scss
@@ -23,7 +23,9 @@
 @import './scss/components/Footer.scss';
 @import './scss/components/FormCreateSneaker.scss';
 @import './scss/components/CreateSneaker.scss';
-// @import './scss/components/shadow.scss';
+@import './scss/components/Sneaker.scss';
+@import './scss/components/SneakerDetail.scss';
+
 
 /*html{
   overflow-x: hidden;
