--- a/src/index.scss
+++ b/src/index.scss
@@ -25,6 +25,8 @@
 @import './scss/components/CreateSneaker.scss';
 @import './scss/components/Sneaker.scss';
 @import './scss/components/SneakerDetail.scss';
+@import './scss/components/Men.scss';
+
 
 
 /*html{
