--- a/src/scss/components/Footer.scss
+++ b/src/scss/components/Footer.scss
@@ -9,11 +9,15 @@
   color: var(--xpress-text-contrast);
   background-color: var(--xpress-background-contrast);
   padding: 3rem;
+  z-index: 10;
   h1{
+    z-index: 10;
     font-family: Xpress;
     font-size: 4rem;
   }
   div{
+    z-index: 10;
+
     display: flex;
     flex-direction: column;
     font-size: 1.8rem;
@@ -51,15 +55,6 @@
     margin-right: 1.2rem;
   }
   button{
-    font-size: 1.6rem;
-    color: white;
-    height: 62px;
-    width: 160px;
-    background-color: black;
-    border: 2px solid black;
-    &:hover{
-      filter: brightness(1.2);
-      cursor: pointer;
-    }
+    @include xpress_button(#000000, $width:160px)
   }
 }
