--- a/src/scss/components/SneakerDetail.scss
+++ b/src/scss/components/SneakerDetail.scss
@@ -8,4 +8,41 @@
     width: 100%;
     height: 100%;
   }
+  margin: 4rem 0;
+}
+.detailContainer{
+  margin-left: 5rem;
+  h1{
+    font-size: 35px;
+  }
+  h2{
+    margin: 1rem 0;
+    font-size: 30px;
+    color: var(--xpress-text-2);
+  }
+  h3{
+    font-size: 30px;
+    font-family: Xpress-bold;
+  }
+  div{
+    margin: 1rem 0;
+
+    display: flex;
+    button{
+      margin-left: 1rem;
+      @include xpress_button($bg:#000000,$width:100%)
+    }
+    select{
+      padding-left: 1rem;
+      @include xpress_button($width:100%,$bgHover:none)
+    }
+  }
+  p{
+    border: 1px solid var(--xpress-border-1) ;
+    width: 100%;
+    margin-top: 1rem;
+    padding: .5rem;
+    border-radius: .2rem;
+    font-size: 1.2rem;
+  }
 }
