--- a/src/index.scss
+++ b/src/index.scss
@@ -26,6 +26,8 @@
 @import './scss/components/Sneaker.scss';
 @import './scss/components/SneakerDetail.scss';
 @import './scss/components/Men.scss';
+@import './scss/components/Paginated.scss';
+
 
 
 
