--- a/src/scss/abstracts/_mixins.scss
+++ b/src/scss/abstracts/_mixins.scss
@@ -7,6 +7,7 @@
   border: 2px solid black;
   font-size: 1.7rem;
   background-color: $bg;
+  color: black;
   @if $bg == #000000{
     color: white;
   }
@@ -18,5 +19,9 @@
       background-color: $bgHover;
     }
     cursor: pointer;
+    color: black;
+    @if $bg == #000000{
+      color: white;
+    }
   }
 } 
