--- a/src/scss/components/FormCreateSneaker.scss
+++ b/src/scss/components/FormCreateSneaker.scss
@@ -35,6 +35,11 @@
     width: 100%;
     font-family: Xpress-medium;
   }
+  select{
+    font-size: 1.2rem;
+    padding-left: 1rem;
+    width: 100%;
+  }
 }
 .sizeform{
   display: flex;
