--- a/src/scss/components/Men.scss
+++ b/src/scss/components/Men.scss
@@ -1,10 +1,10 @@
-.m_option{
+.men_option{
   display: grid;
   grid-template-columns: 1fr 1280px 1fr ;
   grid-template-rows: 170px 1fr 400px;
   background-color: var(--xpress-background-M);
 }
-.w_option{
+.women_option{
   display: grid;
   grid-template-columns: 1fr 1280px 1fr ;
   grid-template-rows: 170px 1fr 400px;
