--- a/src/scss/components/SneakerDetail.scss
+++ b/src/scss/components/SneakerDetail.scss
@@ -13,15 +13,15 @@
 .detailContainer{
   margin-left: 5rem;
   h1{
-    font-size: 35px;
+    font-size: 1.6rem;
   }
   h2{
     margin: 1rem 0;
-    font-size: 30px;
+    font-size: 1.4rem;
     color: var(--xpress-text-2);
   }
   h3{
-    font-size: 30px;
+    font-size: 1.4rem;
     font-family: Xpress-bold;
   }
   div{
@@ -30,11 +30,11 @@
     display: flex;
     button{
       margin-left: 1rem;
-      @include xpress_button($bg:#000000,$width:100%)
+      @include xpress_button($height:55px,$bg:#000000,$width:100%)
     }
     select{
       padding-left: 1rem;
-      @include xpress_button($width:100%,$bgHover:none)
+      @include xpress_button($height:55px,$width:100%,$bgHover:none)
     }
   }
   p{
