--- a/src/scss/components/Login.scss
+++ b/src/scss/components/Login.scss
@@ -3,15 +3,41 @@
   // grid-template-columns: 1fr 1080px 1fr;
   // grid-template-rows: repeat(3, 1fr);
   height: 100vh;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr 75px;
+  @media(min-width: 1140px){
+    grid-template-columns: 1fr 720px;
+  }
+}
+.footer_login{
+  grid-column: 1 / 3;
+  grid-row: 2 / 3;
+  background-color: black;
+}
+.column_1{
+  grid-column: 1 / 2;
+  grid-row: 1 / 2;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.column_2{
+  grid-column: 2 / 3;
+  grid-row: 1 / 2;
+  background-color: aqua;
+  width: 100%;
+  height: 100%;
 }
 .login_form{
-  // grid-column: 2 / 3;
-  // grid-row: 5 / 2;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   height: 100%;
+  @media(min-width: 390px){
+    width: 390px;
+  }
   padding: 1rem;
   input, label{
     width: 100%;
