--- a/src/index.scss
+++ b/src/index.scss
@@ -28,6 +28,8 @@
 @import './scss/components/Men.scss';
 @import './scss/components/Paginated.scss';
 @import './scss/components/Login.scss';
+@import './scss/components/BrandLogo.scss';
+
 
 
 
