--- a/src/scss/components/Login.scss
+++ b/src/scss/components/Login.scss
@@ -10,10 +10,19 @@
     grid-template-columns: 1fr 720px;
   }
 }
-.footer_login{
-  grid-column: 1 / 3;
+.footer_login1{
+  grid-column: 1 / 2;
   grid-row: 2 / 3;
   background-color: black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+}
+.footer_login2{
+  grid-column: 2 / 3;
+  grid-row: 2 / 3;
+  background-color: rgb(58, 58, 58);
 }
 .column_1{
   grid-column: 1 / 2;
@@ -25,9 +34,13 @@
 .column_2{
   grid-column: 2 / 3;
   grid-row: 1 / 2;
-  background-color: aqua;
+  background-color: var(--xpress-border-1);
   width: 100%;
   height: 100%;
+  display: none;
+  @media(min-width: 1140px){
+    display: inline;
+  }
 }
 .login_form{
   display: flex;
